--- a/dfa/src/UI/embc-dfa/src/app/core/components/signature/signature.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/signature/signature.component.html
@@ -22,7 +22,7 @@
                 *ngIf="
                   signatureBlock.signedName?.length > 100
                 "
-                >Maximum length of description is 100 characters</mat-error
+                >Maximum length is 100 characters</mat-error
               >
       </mat-form-field>
     </div>
