--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -94,7 +94,7 @@
                   <div class="col-md-4">
                     <mat-form-field appearance="outline">
                       <mat-label>Full-time occupant first name</mat-label>
-                      <input formControlName="firstName" matInput placeholder="Full-time occupant first name" required/>
+                      <input formControlName="firstName" matInput placeholder="Full-time occupant first name" required maxlength="49"/>
                       <mat-error
                         *ngIf="
                           fullTimeOccupantsForm.get('fullTimeOccupant').controls.firstName.invalid &&
@@ -110,14 +110,14 @@
                           fullTimeOccupantsForm.get('fullTimeOccupant').controls.firstName.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 49 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
                   <div class="col-md-4">
                     <mat-form-field appearance="outline">
                       <mat-label>Full-time occupant last name</mat-label>
-                      <input formControlName="lastName" matInput placeholder="Full-time occupant last name" required/>
+                      <input formControlName="lastName" matInput placeholder="Full-time occupant last name" required maxlength="49"/>
                       <mat-error
                         *ngIf="
                           fullTimeOccupantsForm.get('fullTimeOccupant').controls.lastName.invalid &&
@@ -133,14 +133,14 @@
                           fullTimeOccupantsForm.get('fullTimeOccupant').controls.lastName.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 49 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
                   <div class="col-md-4">
                     <mat-form-field appearance="outline">
                       <mat-label>Relationship to Applicant</mat-label>
-                      <input formControlName="relationship" matInput placeholder="Relationship to Applicant" required />
+                      <input formControlName="relationship" matInput placeholder="Relationship to Applicant" required maxlength="100"/>
                       <mat-error
                         *ngIf="
                           fullTimeOccupantsForm.get('fullTimeOccupant').controls.relationship.invalid &&
@@ -156,7 +156,7 @@
                           fullTimeOccupantsForm.get('fullTimeOccupant').controls.relationship.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 100 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
@@ -319,7 +319,7 @@
                   <div class="col-md-2">
                     <mat-form-field appearance="outline">
                       <mat-label>First name</mat-label>
-                      <input formControlName="firstName" matInput placeholder="First name" required/>
+                      <input formControlName="firstName" matInput placeholder="First name" required maxlength="49"/>
                       <mat-error
                         *ngIf="
                           secondaryApplicantsForm.get('secondaryApplicant').controls.firstName.invalid &&
@@ -335,14 +335,14 @@
                           secondaryApplicantsForm.get('secondaryApplicant').controls.firstName.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 49 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
                   <div class="col-md-2">
                     <mat-form-field appearance="outline">
                       <mat-label>Last name</mat-label>
-                      <input formControlName="lastName" matInput placeholder="Last name" required/>
+                      <input formControlName="lastName" matInput placeholder="Last name" required maxlength="49"/>
                       <mat-error
                         *ngIf="
                           secondaryApplicantsForm.get('secondaryApplicant').controls.lastName.invalid &&
@@ -358,7 +358,7 @@
                           secondaryApplicantsForm.get('secondaryApplicant').controls.lastName.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 49 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
@@ -392,14 +392,14 @@
                           secondaryApplicantsForm.get('secondaryApplicant').controls.phoneNumber.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 100 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
                   <div class="col-md-3">
                     <mat-form-field appearance="outline">
                       <mat-label>Applicant contact email</mat-label>
-                      <input formControlName="email" matInput placeholder="Applicant contact email" required/>
+                      <input formControlName="email" matInput placeholder="Applicant contact email" required type="email" maxlength="100"/>
                       <mat-error
                         *ngIf="
                           secondaryApplicantsForm.get('secondaryApplicant').controls.email.invalid &&
@@ -423,7 +423,7 @@
                           secondaryApplicantsForm.get('secondaryApplicant').controls.email.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 100 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
@@ -560,7 +560,7 @@
                   <div class="col-md-3">
                     <mat-form-field appearance="outline">
                       <mat-label>Contact first name</mat-label>
-                      <input formControlName="firstName" matInput placeholder="Contact first name" required/>
+                      <input formControlName="firstName" matInput placeholder="Contact first name" required maxlength="49"/>
                       <mat-error
                         *ngIf="
                           otherContactsForm.get('otherContact').controls.firstName.invalid &&
@@ -576,14 +576,14 @@
                           otherContactsForm.get('otherContact').controls.firstName.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 49 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
                   <div class="col-md-3">
                     <mat-form-field appearance="outline">
                       <mat-label>Contact last name</mat-label>
-                      <input formControlName="lastName" matInput placeholder="Contact last name" required/>
+                      <input formControlName="lastName" matInput placeholder="Contact last name" required maxlength="49"/>
                       <mat-error
                         *ngIf="
                           otherContactsForm.get('otherContact').controls.lastName.invalid &&
@@ -599,7 +599,7 @@
                           otherContactsForm.get('otherContact').controls.lastName.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 49 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
@@ -633,7 +633,7 @@
                   <div class="col-md-3">
                     <mat-form-field appearance="outline">
                       <mat-label>Contact email</mat-label>
-                      <input formControlName="email" required matInput placeholder="Contact email" />
+                      <input formControlName="email" required matInput placeholder="Contact email" type="email" maxlength="100" />
                       <mat-error
                         *ngIf="
                           otherContactsForm.get('otherContact').controls.email.invalid &&
@@ -656,7 +656,7 @@
                           otherContactsForm.get('otherContact').controls.email.hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 100 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
