--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -155,7 +155,7 @@
                   <div class="col-md-4">
                     <mat-form-field appearance="outline">
                       <mat-label>Name of family member/volunteer</mat-label>
-                      <input formControlName="name" matInput placeholder="Name of family member/volunteer" required/>
+                      <input formControlName="name" matInput placeholder="Name of family member/volunteer" required maxlength="100"/>
                       <mat-error
                         *ngIf="
                           cleanUpLogWorkForm.get('name').invalid &&
@@ -171,28 +171,29 @@
                           cleanUpLogWorkForm.get('cleanuplog.name').hasError('maxLength')
                         "
                       >
-                        Maximum length of 100 characters reached</mat-error
+                        Maximum length is 100 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
                   <div class="col-md-4">
                     <mat-form-field appearance="outline">
                       <mat-label>Hours</mat-label>
-                      <input formControlName="hours" matInput placeholder="Hours" required type="number"/>
+                      <input formControlName="hours" matInput placeholder="Hours" required type="number" max="100000000000" min="0"/>
                       <mat-error
                         *ngIf="
                           cleanUpLogWorkForm.get('cleanuplog.hours').invalid &&
-                          cleanUpLogWorkForm.get('cleanuplog.hours').hasError('maxLength')
+                          (cleanUpLogWorkForm.get('cleanuplog.hours').hasError('max') || cleanUpLogWorkForm.get('cleanuplog.hours').hasError('min'))
                         "
                       >
-                        Maximum length reached</mat-error
+                        Hourse worked must be > 0 and less than 100 000 000 000</mat-error
                       >
                     </mat-form-field>
                   </div>
                   <div class="col-md-4">
                     <mat-form-field appearance="outline">
                       <mat-label>Description</mat-label>
-                      <input formControlName="description" matInput placeholder="Description" required />
+                      <input formControlName="description" matInput placeholder="Description" required maxlength="200" />
+                      <mat-hint>Maximum length is 200 characters</mat-hint>
                       <mat-error
                         *ngIf="
                           cleanUpLogWorkForm.get('cleanuplog.description').invalid &&
@@ -208,7 +209,7 @@
                           cleanUpLogWorkForm.get('cleanuplog.description').hasError('maxLength')
                         "
                       >
-                        Maximum length reached</mat-error
+                        Maximum length is 200 characters</mat-error
                       >
                     </mat-form-field>
                   </div>
