--- a/dfa/src/UI/embc-dfa/src/app/core/components/signature/signature.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/signature/signature.component.html
@@ -17,6 +17,7 @@
           (change)="updateSignatureBlock()"
           [(ngModel)]="signatureBlock.signedName"
           placeholder="Print Name*"
+          maxlength="100"
         />
         <mat-error
                 *ngIf="
