--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
@@ -213,7 +213,7 @@
             requiredFile="no"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList="pdf, jpg, jpeg, png"
-            fileType="Damage photo"
+            fileType="DamagePhoto"
             excludeFileTypes="[]"
             (saveFileUpload)="saveDamagePhotos($event)"
             (cencelFileUpload)="cancelDamagePhotos()"
