--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
@@ -125,7 +125,7 @@
           [formControlName]="'stateProvince'"
           matInput
           placeholder="Province"
-          maxLenth="100"
+          maxlength="100"
           required
         />
         <!--<mat-autocomplete
