--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
@@ -16,10 +16,10 @@
         </div><br/><br/>
         <div class="row">
           <div class="col-md-6 bottomspace">
-            <app-signature [isRequired]="true" whoseSignature="Applicant" (signature)="updateApplicantSignature($event)" [initialSignature]="initialApplicantSignature"></app-signature>
+            <app-signature [isRequired]="true" whoseSignature="Applicant" (signature)="updateApplicantSignature($event)" [initialSignature]="initialApplicantSignature.signature" [initialDateSigned]="initialApplicantSignature.dateSigned" [initialSignedName]="initialApplicantSignature.signedName"></app-signature>
           </div>
           <div class="col-md-6 bottomspace">
-            <app-signature *ngIf="isSecondaryApplicant === true" [isRequired]="true" whoseSignature="Secondary Applicant" (signature)="updateSecondaryApplicantSignature($event)" [initialSignature]="initialSecondaryApplicantSignature"></app-signature>
+            <app-signature *ngIf="isSecondaryApplicant === true" [isRequired]="true" whoseSignature="Secondary Applicant" (signature)="updateSecondaryApplicantSignature($event)" [initialSignature]="initialSecondaryApplicantSignature.signature" [initialDateSigned]="initialSecondaryApplicantSignature.dateSigned" [initialSignedName]="initialSecondaryApplicantSignature.signedName"></app-signature>
           </div>
         </div>
 
