--- a/dfa/src/UI/embc-dfa/src/app/core/components/app-loader/app-loader.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/app-loader/app-loader.component.html
@@ -1,4 +1,4 @@
-<div class="loader-align">
+<div [ngClass]="showLoader == true ? 'loading' : 'unloading'">
   <mat-spinner
     [ngStyle]="spinnerColor"
     strokeWidth="strokeWidth"
