--- a/dfa/src/UI/embc-dfa/src/app/core/components/app-loader/app-loader.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/app-loader/app-loader.component.scss
@@ -7,3 +7,50 @@
   padding-left: 7px;
   display: inline-flex;
 }
+
+.unloading {
+  content: none !important;
+}
+
+ /*Absolute Center Spinner*/ 
+.loading {
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: visible;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+ /*Transparent Overlay*/
+.loading:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+}
+
+.loading:after {
+  content: none !important;
+  /*content: '';
+  display: block;*/
+}
+
+/* :not(:required) hides these rules from IE9 and below */
+/*.loading:not(:required) {*/
+  /*hide "loading..." text*/
+  /*color: transparent;
+  content: none;
+  font: 0/0 a;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}*/
