--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.scss
@@ -68,3 +68,10 @@
   font-size: 20px;
   padding: 0 50px 0 50px;
 }
+
+.spinner {
+  position: absolute;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+}
