--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
@@ -25,7 +25,7 @@
 
       </ng-container>
     </form>
-    <div *ngIf="dfaApplicationMainDataService.isSubmitted == true">
+    <div *ngIf="dfaApplicationMainDataService.isSubmitted == true || vieworedit === 'view'">
       Your application has been submitted.<br/><br/>
 
       You may view the status of your application on your dashboard and a copy has been emailed to you at the email address provided.
